--- a/k8s/prometheus-config.yaml
+++ b/k8s/prometheus-config.yaml
@@ -8,6 +8,14 @@ data:
     global:
       scrape_interval: 15s
 
+    alerting:
+      alertmanagers:
+        - static_configs:
+            - targets: ['alertmanager:9093']
+
+    rule_files:
+      - "/etc/prometheus/rules/*.rules"
+
     scrape_configs:
       - job_name: 'app'
         static_configs:
@@ -16,3 +24,23 @@ data:
       - job_name: 'cadvisor'
         static_configs:
           - targets: ['cadvisor:8080']
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: prometheus-rules
+  namespace: sre-lab
+data:
+  app-down.rules: |
+    groups:
+      - name: app.rules
+        rules:
+          - alert: AppDown
+            expr: up{job="app"} == 0
+            for: 30s
+            labels:
+              severity: page
+            annotations:
+              summary: "App target is down"
+              description: "Prometheus job 'app' has no healthy instances for more than 30s."
