--- a/k8s/alertmanager-deployment.yaml
+++ b/k8s/alertmanager-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: alertmanager
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   replicas: 1
   selector:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: alertmanager
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   selector:
     app: alertmanager
