--- a/k8s/app-deployment.yaml
+++ b/k8s/app-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app
-  namespace: sre-lab
+  namespace: app
 spec:
   replicas: 2
   selector:
@@ -37,7 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app
-  namespace: sre-lab
+  namespace: app
 spec:
   ports:
     - name: http
