--- a/k8s/cadvisor-daemonset.yaml
+++ b/k8s/cadvisor-daemonset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: cadvisor
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   selector:
     matchLabels:
@@ -18,9 +18,25 @@ spec:
           image: gcr.io/cadvisor/cadvisor:latest
           ports:
             - containerPort: 8080
-              hostPort: 8080
           securityContext:
             privileged: true
+          resources:
+            limits:
+              cpu: 300m
+              memory: 2000Mi
+            requests:
+              cpu: 150m
+              memory: 200Mi
+          lifecycle:
+            preStop:
+              exec:
+                command: ["/bin/sh", "-c", "sleep 5"]
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
           args:
             - "--port=8080"
             - "--prometheus_endpoint=/metrics"
@@ -55,7 +71,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cadvisor
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   selector:
     app: cadvisor
