--- a/k8s/graphana-deployment.yaml
+++ b/k8s/graphana-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: grafana
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   replicas: 1
   selector:
@@ -37,7 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   selector:
     app: grafana
@@ -51,7 +51,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-datasources
-  namespace: sre-lab
+  namespace: monitoring
 data:
   prometheus.yaml: |
     apiVersion: 1
