--- a/k8s/jenkins-deployment.yaml
+++ b/k8s/jenkins-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins
-  namespace: sre-lab
+  namespace: cicd
 spec:
   replicas: 1
   selector:
@@ -30,7 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins
-  namespace: sre-lab
+  namespace: cicd
 spec:
   selector:
     app: jenkins
