--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -1,4 +1,20 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sre-lab
+  name: monitoring
+  labels:
+    name: monitoring
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: app
+  labels:
+    name: app
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cicd
+  labels:
+    name: cicd
