--- a/k8s/prometheus-config.yaml
+++ b/k8s/prometheus-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: sre-lab
+  namespace: monitoring
 data:
   prometheus.yml: |
     global:
@@ -30,7 +30,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-rules
-  namespace: sre-lab
+  namespace: monitoring
 data:
   app-down.rules: |
     groups:
