--- a/k8s/prometheus-deployment.yaml
+++ b/k8s/prometheus-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   replicas: 1
   selector:
@@ -42,7 +42,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: sre-lab
+  namespace: monitoring
 spec:
   selector:
     app: prometheus
